@@ -345,6 +345,7 @@ dox.mangoJavaScriptUnits=Java Script Units
 dox.threadPoolSettings=Thread pool settings
 dox.serialSocketBridge=Serial socket bridge
 dox.bulkDataPointPermissions=Bulk data point permissions
+dox.siteAnalyticsSettings=Site analytics settings
 
 ftl.userTestEmail=This message was sent as a test of the email address for user {0}
 ftl.automatedEmail=This email was sent by an automated service. Please do not respond.
@@ -1279,6 +1280,11 @@ systemSettings.comm.virtual.serialSocketBridgeSettings.commPortId=Serial port id
 systemSettings.comm.virtual.serialSocketBridgeSettings.address=Host
 systemSettings.comm.virtual.serialSocketBridgeSettings.port=Port
 systemSettings.comm.virtual.serialSocketBridgeSettings.timeout=Timeout (ms)
+systemSettings.siteAnalytics=Site analytics
+systemSettings.siteAnalytics.headTag=Inserted before the closing 'head' tag
+systemSettings.siteAnalytics.bodyTag=Inserted before the closing 'body' tag
+systemSettings.siteAnalytics.saved=Site analytics saved
+
 header.virtualSerialPorts=Virtual serial ports
 emport.virtualserialport.prefix=Virtual Serial Port ''{0}'': {1}
 emport.virtualserialport.missingType=Virtual Serial Port with XID ''{0}'' does not already exist and does not have a ''type'' value. Valid types are {1}
