@@ -1,0 +1,10 @@
+<!--
+    Copyright (C) 2016 Infinite Automation Systems Inc. All rights reserved.
+    @author Terry Packer
+-->
+<p>
+  Site analytics are used to track various statistics about your Mango pages.  There are 2 
+  places that HTML or script tags can be inserted into Mango's pages.  The first is just before 
+  the closing &lt;/head&gt; tag and the second is just before the closing &lt;/body&gt; tag.  The contents of 
+  these will be placed at the corresponding location of <b>every</b> page in Mango.  When left blank, nothing is inserted.
+</p>
